Branch pom version. Vaadin 25. Truncate Duration to remove fractions of a second, else validation fails. Allow uppercase DHMS